--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,57 @@
 [user]
 	name = matt
 	email = matt@iflowfor8hours.info
+[alias]
+  ll = "!source ~/.githelpers && pretty_git_log"
+  lm = "!source ~/.githelpers && pretty_git_merges"
+  addall = !git add . && git add -u
+  co = checkout
+  dt = difftool
+  st = status
+  ss = status -s
+  ci = !git add -A && git commit
+  aci = "!source ~/.githelpers && what_the_commit"
+  amend = commit --amend
+  cp = cherry-pick -x
+  unstage = reset HEAD
+  uncommit = reset --soft HEAD^
+  kill = reset --hard HEAD^
+  ps = push -u origin
+  br = branch
+  type = cat-file -t
+  dump = cat-file -p
+  incoming = !git fetch && git log master ^origin/master
+  outgoing = !git fetch && git log origin/master ^master
+[color]
+  branch = auto
+  diff = auto
+  status = auto
+  interactive = auto
+  ui = auto
+[color "branch"]
+  current = yellow
+  local = blue
+  remote = green
+[color "diff"]
+  meta = white
+  frag = blue
+  old = magenta
+  new = green
+[color "status"]
+  added = green
+  changed = blue
+  untracked = magenta
+[difftool]
+     prompt = false
+[core]
+  editor = subl -w
+  quotepath = false
+  excludesfile = /home/matt/.gitignore
+  autocrlf = false
+  safecrlf = true
+[gc]
+     auto = 1
+[merge]
+     summary = true
+[diff]
+	external = ~/dotfiles/bin/melddiff
