--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
   dt = difftool
   st = status
   ss = status -s
-  ci = !git add -A && git commit
+  ci = !git add -A && git pull --rebase && git commit
   aci = "!source ~/.githelpers && what_the_commit"
   amend = commit --amend
   cp = cherry-pick -x
