Hope that didnt destrooy my imap directories

--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -7,22 +7,27 @@
   go_up = <Alt>k
   switch_to_tab_10 = XF86WakeUp
   switch_to_tab_4 = <Alt>4
+  switch_to_tab_6 = <Alt>6
+  switch_to_tab_7 = <Alt>7
   go_down = <Alt>j
+  switch_to_tab_5 = <Alt>5
   switch_to_tab_2 = <Alt>2
   go_right = <Alt>l
   switch_to_tab_1 = <Alt>1
   go_left = <Alt>h
+  switch_to_tab_9 = <Alt>8
+  switch_to_tab_8 = <Alt>8
   switch_to_tab_3 = <Alt>3
 [profiles]
   [[default]]
     scrollbar_position = hidden
     use_system_font = False
     background_image = None
-    foreground_color = "#b3b3b3"
+    foreground_color = "#839496"
     scroll_on_output = False
     show_titlebar = False
-    font = Source Code Pro Medium 14
-    background_color = "#131926"
+    font = Source Code Pro Medium 10
+    background_color = "#002b36"
     scrollback_infinite = True
 [layouts]
   [[default]]
