--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,51 +1,149 @@
-# Make tmux's command key like screen.
-set-option -g prefix C-a
-unbind-key C-b
-bind-key a send-prefix # C-a a sends literal 'C-a'
+# Use something easier to type as the prefix.
+set -g prefix C-g
+unbind C-b
+bind C-g send-prefix
 
-# vi is win.
-set-window-option -g mode-keys vi
-set-option -g status-keys vi
+# Relax!
+set -sg escape-time 0
+set -sg repeat-time 600
 
-bind-key C-n next-window
-bind-key C-p previous-window
+# Shut up.
+set -g quiet on
 
-bind-key k select-pane -U
-bind-key C-k select-pane -U
-bind-key j select-pane -D
-bind-key C-j select-pane -D
-bind-key Escape copy-mode
+# Mouse
+set -g mode-mouse on
+##set -g mode-mouse copy
+setw -g mouse-select-window on
+setw -g mouse-select-pane on
 
-# Alternate screen is annoying.
-set-window-option -g alternate-screen off
+#  #set -g mode-mouse on
+#  set-option -g mouse-select-pane off
+#  set-option -g mouse-resize-pane off
+#  set-option -g mouse-select-window off
+#  set-window-option -g mode-mouse on
 
-unbind '"'
-bind-key '"' choose-window
+# Less stretching to get to the first item.
+set -g base-index 1
+setw -g pane-base-index 1
 
-bind-key / command-prompt "find-window %1"
-# Find all vim windows
-bind-key v find-window vim
+# Reload the config.
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
-# Allow mouse clicky.
-set-option -g mouse-select-pane on
-# but not to select text.
-set-window-option -g mode-mouse off 
+# Saner splitting.
+bind v split-window -h -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
+bind S choose-session
 
-# Don't set the window name, I'll be doing it.
-set-window-option -g automatic-rename off
-set-option -g set-titles on
-set-option -g set-titles-string '[#I] #T - #W'
+# Pane movement
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# My xterms support 256 colors.
-set-option -g terminal-overrides "xterm*:colors=256"
-set-option -g terminal-overrides "xterm:colors=256"
+# DVTM style pane selection
+bind 1 select-pane -t 1
+bind 2 select-pane -t 2
+bind 3 select-pane -t 3
+bind 4 select-pane -t 4
+bind 5 select-pane -t 5
+bind 6 select-pane -t 6
+bind 7 select-pane -t 7
+bind 8 select-pane -t 8
+bind 9 select-pane -t 9
 
-# If I run tmux via screen.
-set-option -g terminal-overrides "screen:colors=256"
+# Layouts
+set -g main-pane-width 260
+bind M select-layout main-vertical
+bind E select-layout even-horizontal
 
-set-option -g status off         # No status bar
-set-option -g bell-action none   # bells are annoying
-set-option -g visual-bell off    # visual bells are worse
+# Pane resizing
+bind -r C-h resize-pane -L 
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
+
+# Window movement
+bind-key -r H swap-window -t -1
+bind-key -r L swap-window -t +1
+#bind m command-prompt "move-window -t %%"
+
+# 256 colors please
+set -g default-terminal "screen-256color"
+
+# Custom status bar
+set -g status-left-length 32
+set -g status-right-length 150
+set -g status-interval 5
+
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour238,nobold]|#[fg=colour15,bg=colour238,bold]#[fg=colour238,bg=colour234,nobold]'
+
+set -g status-right "#[fg=colour245] | #(date +%%H:%%M) | %d %b #[fg=colour254,bg=colour234,nobold]#[fg=colour16,bg=colour254,bold] #h "
+
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
+
+# Activity
+setw -g monitor-activity on
+set -g visual-activity off
+
+# Autorename sanely.
+setw -g automatic-rename on
+
+# Better name management
+bind c new-window
+bind , command-prompt "rename-window '%%'"
+bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
+
+# Copy mode
+setw -g mode-keys vi
+bind ` copy-mode
+unbind [
+unbind p
+bind p paste-buffer
+bind -t vi-copy H start-of-line
+bind -t vi-copy L end-of-line
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy Escape cancel
+bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# Toggle synchronized panes for the current window
+bind S set synchronize-panes
 
 bind r source-file ~/.tmux.conf
+
+##### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+#set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
 
