remove some more data

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -113,7 +113,7 @@ default_msg_part = "WeeChat %v"
 default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
-nicks = "matt,matt1,matt2,matt3,matt4"
+nicks = "iflowfor8hours"
 notify = ""
 password = ""
 proxy = ""
