--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -29,6 +29,13 @@
     font = Source Code Pro Semi-Bold 10
     background_color = "#002b36"
     scrollback_infinite = True
+  [[solarized-dark]]
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    background_color = "#eee8d5"
+    background_image = None
+    cursor_color = "#002b36"
+    foreground_color = "#002b36"
+  [[solarized-light]]
 [layouts]
   [[default]]
     [[[child1]]]
