--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,42 +1,24 @@
 [global_config]
+  borderless = True
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, Logger, LaunchpadBugURLHandler
   suppress_multiple_term_dialog = True
-  borderless = True
 [keybindings]
-  toggle_zoom = <Alt>f
+  go_down = <Alt>j
+  go_left = <Alt>h
+  go_right = <Alt>l
   go_up = <Alt>k
+  layout_launcher = <Primary><Shift>asciitilde
+  switch_to_tab_1 = <Alt>1
   switch_to_tab_10 = XF86WakeUp
+  switch_to_tab_2 = <Alt>2
+  switch_to_tab_3 = <Alt>3
   switch_to_tab_4 = <Alt>4
+  switch_to_tab_5 = <Alt>5
   switch_to_tab_6 = <Alt>6
   switch_to_tab_7 = <Alt>7
-  go_down = <Alt>j
-  switch_to_tab_5 = <Alt>5
-  switch_to_tab_2 = <Alt>2
-  go_right = <Alt>l
-  switch_to_tab_1 = <Alt>1
-  go_left = <Alt>h
-  switch_to_tab_9 = <Alt>8
   switch_to_tab_8 = <Alt>8
-  switch_to_tab_3 = <Alt>3
-[profiles]
-  [[default]]
-    scrollbar_position = hidden
-    use_system_font = False
-    background_image = None
-    foreground_color = "#839496"
-    scroll_on_output = False
-    show_titlebar = False
-    font = Source Code Pro Semi-Bold 14
-    background_color = "#002b36"
-    scrollback_infinite = True
-  [[solarized-dark]]
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
-    background_color = "#eee8d5"
-    background_image = None
-    cursor_color = "#002b36"
-    foreground_color = "#002b36"
-  [[solarized-light]]
-    background_image = None
+  switch_to_tab_9 = <Alt>8
+  toggle_zoom = <Alt>x
 [layouts]
   [[default]]
     [[[child1]]]
@@ -78,3 +60,22 @@
       profile = default
       type = Terminal
 [plugins]
+[profiles]
+  [[default]]
+    background_color = "#002b36"
+    background_image = None
+    font = Source Code Pro Semi-Bold 14
+    foreground_color = "#839496"
+    scroll_on_output = False
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    show_titlebar = False
+    use_system_font = False
+  [[solarized-dark]]
+    background_color = "#eee8d5"
+    background_image = None
+    cursor_color = "#002b36"
+    foreground_color = "#002b36"
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+  [[solarized-light]]
+    background_image = None
