--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,14 @@
 	email = matt.urbanski@iflowfor8hours.info
 [alias]
   ll = log --oneline --graph --decorate --all
-  addall = !git add . && git add -u
+	addall = !git add . && git add -u
+	lg = !"git lg1"
+	lg1 = !"git lg1-specific --all"
+	lg2 = !"git lg2-specific --all"
+	lg3 = !"git lg3-specific --all"
+	lg1-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)'
+	lg2-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
+	lg3-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset) %C(bold cyan)(committed: %cD)%C(reset) %C(auto)%d%C(reset)%n''          %C(white)%s%C(reset)%n''          %C(dim white)- %an <%ae> %C(reset) %C(dim white)(committer: %cn <%ce>)%C(reset)'
   co = checkout
   dt = difftool
   st = status
@@ -20,14 +27,11 @@
   incoming = !git fetch && git log master ^origin/master
   outgoing = !git fetch && git log origin/master ^master
   sed = ! git grep -z --full-name -l '.' | xargs -0 sed -i -e
-
   root = rev-parse --show-toplevel
   d = "!sh -c 'git diff $* | vim -R -' -"
   di = !git diff --cached | vim -R -
-
-
-    shelve = stash save --include-untracked
-    unshelve = stash pop
+	shelve = stash save --include-untracked
+	unshelve = stash pop
               
 [difftool]
   prompt = false
