--- a/.taskrc
+++ b/.taskrc
@@ -35,3 +35,6 @@ taskd.certificate=/home/matt/.task/private.cert
 taskd.ca=/home/matt/.task/ca.cert.pem
 taskd.credentials=inthe_am/ur.matt/03a342da-5f33-4c82-b676-b2768599a748
 taskd.trust=ignore hostname
+
+default.due=+7days
+default.status=active
