--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,26 +1,29 @@
-# Use something easier to type as the prefix.
-set -g prefix C-g
-unbind C-b
-bind C-g send-prefix
+#the default tmux delay, this makes tmux more responsive.
+set -s escape-time 0
+
+# also ctrl-s
+set -g prefix2 C-s
+
+# Make tmux act like xterm to prevent Vim issues:
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# Only resize the screen size if the smaller screen user has their window
+setw -g aggressive-resize on
+
+# Store a lot of history.
+set -g history-limit 100000
 
 # Relax!
 set -sg escape-time 0
 set -sg repeat-time 600
 
+# prefix -> back-one-character
+bind-key C-b send-prefix
+# prefix-2 -> forward-incremental-history-search
+bind-key C-s send-prefix -2
+
 # Shut up.
 set -g quiet on
-
-# Mouse
-set -g mode-mouse on
-##set -g mode-mouse copy
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
-
-#  #set -g mode-mouse on
-#  set-option -g mouse-select-pane off
-#  set-option -g mouse-resize-pane off
-#  set-option -g mouse-select-window off
-#  set-window-option -g mode-mouse on
 
 # Less stretching to get to the first item.
 set -g base-index 1
@@ -29,58 +32,32 @@ setw -g pane-base-index 1
 # Reload the config.
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
-# Saner splitting.
-bind v split-window -h -c '#{pane_current_path}'
-bind s split-window -v -c '#{pane_current_path}'
-bind S choose-session
-
-# Pane movement
+# Use Vim movement key mappings for switching around between panes.
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# DVTM style pane selection
-bind 1 select-pane -t 1
-bind 2 select-pane -t 2
-bind 3 select-pane -t 3
-bind 4 select-pane -t 4
-bind 5 select-pane -t 5
-bind 6 select-pane -t 6
-bind 7 select-pane -t 7
-bind 8 select-pane -t 8
-bind 9 select-pane -t 9
+# Use Vim movement key mappings (uppercase) for resizing panes.
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
-# Layouts
-set -g main-pane-width 260
-bind M select-layout main-vertical
-bind E select-layout even-horizontal
+# zoom with x
+bind -r x resize-pane -Z
 
-# Pane resizing
-bind -r C-h resize-pane -L 
-bind -r C-j resize-pane -D 5
-bind -r C-k resize-pane -U 5
-bind -r C-l resize-pane -R 5
+# change sessions
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
-# Window movement
-bind-key -r H swap-window -t -1
-bind-key -r L swap-window -t +1
-#bind m command-prompt "move-window -t %%"
+# Saner splitting.
+bind e split-window -h -c '#{pane_current_path}'
+bind o split-window -v -c '#{pane_current_path}'
+bind S choose-session
 
 # 256 colors please
 set -g default-terminal "screen-256color"
-
-# Custom status bar
-set -g status-left-length 32
-set -g status-right-length 150
-set -g status-interval 5
-
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour238,nobold]|#[fg=colour15,bg=colour238,bold]#[fg=colour238,bg=colour234,nobold]'
-
-set -g status-right "#[fg=colour245] | #(date +%%H:%%M) | %d %b #[fg=colour254,bg=colour234,nobold]#[fg=colour16,bg=colour254,bold] #h "
-
-set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
 
 # Activity
 setw -g monitor-activity on
@@ -97,9 +74,7 @@ bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 # Copy mode
 setw -g mode-keys vi
 bind ` copy-mode
-unbind [
-unbind p
-bind p paste-buffer
+bind P paste-buffer
 bind -t vi-copy H start-of-line
 bind -t vi-copy L end-of-line
 bind -t vi-copy v begin-selection
@@ -110,40 +85,41 @@ bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 # Toggle synchronized panes for the current window
 bind S set synchronize-panes
 
-bind r source-file ~/.tmux.conf
+##### APPEARANCE
+# Use Solarized colorscheme.
+set -g status-bg black #base02
+set -g status-fg yellow #yellow
+set -g status-attr default
 
-##### COLOUR (Solarized 256)
+# Default window title colors.
+setw -g window-status-fg brightblue #base0
+setw -g window-status-bg default
+setw -g window-status-current-fg brightred #orange
+setw -g window-status-current-bg default
 
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# Pane border.
+set -g pane-border-fg black #base02
+set -g pane-active-border-fg brightgreen #base01
 
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+# Message text.
+set -g message-bg black #base02
+set -g message-fg brightred #orange
 
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+# Pane number display.
+set -g display-panes-active-colour blue #blue
+set -g display-panes-colour brightred #orange
 
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+## Custom status bar
+set -g status-left-length 32
+set -g status-right-length 150
+set -g status-interval 5
 
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S '
 
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+set -g status-right "%d %b #[fg=colour254,bg=colour234,nobold]#[fg=colour16,bg=colour254,bold] #(date +%%H:%%M) "
 
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
 
-# bell
-#set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
-
+# Center the window list
+set -g status-justify centre
